removed all but first next arrow element to fix layout issue. moved gallery to just before footer

--- a/app/scss/components/_gallery.scss
+++ b/app/scss/components/_gallery.scss
@@ -32,8 +32,13 @@
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: space-evenly;
-		gap: 5px;
+		gap: 10px;
+
 		align-items: center;
+
+		@include u.breakpoint(large) {
+			row-gap: 40px;
+		}
 	}
 
 	&__image {
@@ -47,9 +52,9 @@
 			width: 40vw;
 		}
 
-	@include u.breakpoint-down(small) {
-		width: 90vw;
-	}
+		@include u.breakpoint-down(small) {
+			width: 90vw;
+		}
 		& img {
 			width: 100%;
 			height: 100%;
