--- a/app/scss/components/_next.scss
+++ b/app/scss/components/_next.scss
@@ -16,7 +16,7 @@
 	-o-animation: fadeInOut 3s infinite;
 	animation: fadeInOut 3s infinite;
 	animation-delay: 0.5s;
-	z-index: 100;
+	z-index: 1000;
 	padding-bottom: 5%;
 }
 
